# vm-spawn

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  .sops.yaml  26_26_ACHIEVEMENT_SEAL.md  AGENTS.md  ARCHITECTURE.md  AURORA_99_LAUNCH.md  AURORA_99_ROADMAP.md  AURORA_99_STATUS.md  AURORA_99_TASKS.md  AURORA_GA_ANNOUNCEMENT.md  AURORA_GA_DEPLOYMENT_PLAN.md  AURORA_GA_HANDOFF_COMPLETE.md  AURORA_RC1_READINESS.md  AURORA_REPOSITORY_SEAL.md  AWS_EKS_QUICKSTART.md  C3L_DEPLOYMENT_COMPLETE.md  C3L_FINALIZATION_COMPLETE.md  C3L_INTEGRATION_RECORD.md  C3L_INTEGRATION_SUMMARY.txt  CHANGELOG.md  CHECKSUMS.txt  CICD-SETUP.md  CLEANUP_GCP_DOCS_2025-10-24.md  CLEANUP_RECOMMENDATIONS.md  CONTRIBUTING.md  DAO_GOVERNANCE_PACK_COMPLETE.md  DEPLOYMENT_COMPLETE_100_PERCENT.md  DEPLOY_GCP_QUICKSTART.md  DOCS_GUARDIANS_INSTALLED.md  DOCS_GUARDIAN_COMPLETE.md  DOCUMENTATION_ARCHIVING_PROPOSAL.md  DOCUMENTATION_STATE_REPORT.md  EXECUTION_STATUS.md  EXPERIMENTAL_SERVICES.md  FASTMCP_INSTALLATION.md  FOUR_COVENANTS_DEPLOYED.md  GCP_COST_COMPARISON.md  GCP_DEPLOYMENT_STATUS.md  (+90 more)
.amazonq/rules/: adr-pattern.md  amazonq-interaction-rules.md  evolution-roadmap.md  four-covenants.md  operational-rituals.md  philosophical-foundation.md  psi-field-awareness.md
.ci-cd/: INTEGRATION-SUMMARY.md  README.md  cloudbuild.yaml  rbac-deployer.yaml  setup-manual-steps.sh
.claude/: settings.local.json
.github/: CODEOWNERS  PHASE_V_PR_TEMPLATE.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: aurora-akash-pr.md
.obsidian/: workspace.json
.vaultmesh/: covenant.yaml
DAO_GOVERNANCE_PACK/: CHANGELOG.md  MEMBER_QUICK_VERIFY.md  README.md  operator-runbook.md  safe-note.json  snapshot-proposal.md
cli/: __init__.py  vm.py
contracts/: RemembrancerAnchor.sol
docs/: AURORA_RUNBOOK.md  COVENANT_HARDENING.md  COVENANT_SIGNING.md  COVENANT_TIMESTAMPS.md  FEDERATION_OPERATIONS.md  FEDERATION_PROTOCOL.md  FEDERATION_SEMANTICS.md  LICENSES.md  OPERATOR_CHECKLIST.md  PSI_FIELD.md  Phase_VI_Evolution_Plan.md  README.md  REMEMBRANCER.md  REMEMBRANCER_PHASE_V.md  REPO_HYGIENE.md  VERIFY.md  aurora-architecture.md
engines/aurora-intelligence/: README.md  build.sh  pyproject.toml
engines/aurora-intelligence/src/aurora_intelligence/: auditor.py  strategist.py
engines/aurora-intelligence/src/aurora_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engines/aurora-intelligence/tests/: test_engine.py
examples/crypto-shred-demo/rust/: Cargo.toml
examples/crypto-shred-demo/rust/src/: main.rs
generators/: cicd.sh  dockerfile.sh  gitignore.sh  kubernetes.sh  makefile.sh  mcp-server.sh  message-queue.sh  monitoring.sh  readme.sh  source.sh  tests.sh
k8s/: deployments.yaml  ingress.yaml
ops/: C3L_RUNBOOK.md  COVENANT_RITUALS.md  IMMEDIATE_ACTIONS.md  README_EXECUTION.md
ops/certs/: README.md  (+2 more)
policy/: admission.rego  pinned_digests.rego  vault-law-akash-policy.rs
pr/: PHASE_V_PR_BODY.md
rubber-ducky/: ENCODE_NOTES.v2.3.0.txt  INSTALL_TO_DUCKY.sh  V2.3.0_INTEGRATION_COMPLETE.txt  duck_bootstrap.ps1  make_inject.sh  payload-github.txt  payload-linux-github.v2.3.0.txt  payload-macos-github.v2.3.0.txt  payload-offline.txt  payload-windows-github.v2.3.0.txt  payload-windows-offline.v2.3.0.txt
schemas/: asset-issue.schema.json  axelar-ack.schema.json  axelar-order.schema.json  batch-manifest.v1.json  governance.cadence.set.schema.json  governance.cadence.set@1.0.0.json  indexer-checkpoint.schema.json  ledger-append.schema.json  manifest.json  oracle-publish.schema.json  receipt.v1.json  registry-set.schema.json  sequencer-commit.schema.json  vote-cast.schema.json  workflow-transition.schema.json
scripts/: ack-verify.py  aurora-axelar-mock.py  aurora-metrics-exporter.py  aurora-order-submit.sh  aurora-receipt-verify.sh  canary-slo-reporter.py  extract-slo-metrics.py  forge_v5.sh  nonce-cache-helper.py  oracle-fetch.py  phase4-verify-phase5-prep.sh  policy-host-adapter.py  release-ga.sh  repo_audit.py  sim-metrics-exporter.py  slo-signer.sh  smoke-e2e.sh  terraform_triage.sh  treaty-generate.sh  vaultmesh_migrate.sh  verify-aurora-ga.sh
src/: __init__.py  conflict_resolver.py  feature_flags.py
templates/: aurora-treaty-akash.json
tests/: test_conflict_resolver.py
tools/: package-lock.json  verify-anchor.ts  verify-receipt.ts  vmsh-federation.ts
treaties/: aurora-akash.yaml
v4.5-scaffold/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
v4.5-scaffold/.github/workflows/: ci.yml
v4.5-scaffold/crates/vault-law-akash-policy/: Cargo.toml
v4.5-scaffold/crates/vault-law-akash-policy/src/: lib.rs
v4.5-scaffold/crates/vm-cli/: Cargo.toml
v4.5-scaffold/crates/vm-cli/src/: main.rs
v4.5-scaffold/crates/vm-core/: Cargo.toml
v4.5-scaffold/crates/vm-core/src/: canonical.rs  lib.rs  merkle.rs  receipt.rs  types.rs
v4.5-scaffold/crates/vm-crypto/: Cargo.toml
v4.5-scaffold/crates/vm-crypto/src/: error.rs  lib.rs  pgp.rs  tsa.rs
v4.5-scaffold/crates/vm-fed/: Cargo.toml
v4.5-scaffold/crates/vm-fed/src/: lib.rs
v4.5-scaffold/crates/vm-remembrancer/: Cargo.toml
v4.5-scaffold/crates/vm-remembrancer/src/: lib.rs
v4.5-scaffold/docs/adr/: ADR-0005-federation-envelope.md
v4.5-scaffold/fuzz/: Cargo.toml
v4.5-scaffold/fuzz/fuzz_targets/: receipt_parse.rs
v4.5-scaffold/rust/: .gitignore  Cargo.toml  README.md
v4.5-scaffold/rust/crates/vm-adapter-axum/: Cargo.toml
v4.5-scaffold/rust/crates/vm-adapter-axum/src/: lib.rs  main.rs
v4.5-scaffold/rust/crates/vm-adapter-axum/tests/: e2e_negative.rs  e2e_replay.rs  e2e_roundtrip.rs  e2e_skew.rs
v4.5-scaffold/rust/crates/vm-cli/: Cargo.toml
v4.5-scaffold/rust/crates/vm-cli/src/: main.rs
v4.5-scaffold/rust/crates/vm-core/: Cargo.toml
v4.5-scaffold/rust/crates/vm-core/src/: lib.rs
v4.5-scaffold/rust/crates/vm-httpsig/: Cargo.toml
v4.5-scaffold/rust/crates/vm-httpsig/src/: lib.rs
v4.5-scaffold/rust/crates/vm-receipt/: Cargo.toml
v4.5-scaffold/rust/crates/vm-receipt/src/: lib.rs
v4.5-scaffold/rust/examples/: mini.json
vaultmesh-us-mcp/: MCP_GO_NO_GO_PLAN.md
vaultmesh_c3l_package/: spawn.sh
(+470 files in other folders)
