[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["VaultMesh Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
miette = { version = "7", features = ["fancy"] }
rusqlite = { version = "0.31", features = ["bundled"] }
redb = "1"
sequoia-openpgp = { version = "1", default-features = true }
x509-tsp = "0.3"
rustls = "0.23"
aws-lc-rs = "1"
openssl = { version = "0.10", features = ["vendored"] }
