[workspace]
members = [
  "crates/vm-core",
  "crates/vm-receipt",
  "crates/vm-httpsig",
  "crates/vm-adapter-axum",
  "crates/vm-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["VaultSovereign"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
blake3 = "1.5"
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }
http = "1"
http-body-util = "0.1"
tower = "0.5"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pem-rfc7468 = "0.7"
pkcs8 = "0.10"
hex = "0.4"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
