[package]
name = "crypto-shred-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
blake3 = "1"
ed25519-dalek = "2"
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }

