[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
