[package]
name = "vm-crypto"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["tls-rustls"]
pgp = ["dep:sequoia-openpgp"]
tsa = ["dep:x509-tsp"]
tls-rustls = ["dep:rustls","dep:aws-lc-rs"]
openssl = ["dep:openssl"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sequoia-openpgp = { workspace = true, optional = true }
x509-tsp = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
