[package]
name = "vm-adapter-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
vm-httpsig = { path = "../vm-httpsig" }
vm-receipt = { path = "../vm-receipt" }
ed25519-dalek.workspace = true
tracing-subscriber.workspace = true
http-body-util.workspace = true

[dev-dependencies]
rand_core = "0.6"
reqwest.workspace = true
tokio.workspace = true
time.workspace = true
