[package]
name = "vm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
http.workspace = true
vm-core = { path = "../vm-core" }
vm-receipt = { path = "../vm-receipt" }
vm-httpsig = { path = "../vm-httpsig" }
time.workspace = true
uuid.workspace = true
