[package]
name = "vm-httpsig"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
time.workspace = true
http.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
pkcs8.workspace = true
pem-rfc7468.workspace = true
parking_lot.workspace = true
